# CrossBinary

./: .gitignore  CMakeLists.txt
include/: binary.h  config.h  loader.h  mainwindow.h  output_handler.h
include/ui/: mainwindow.h  outputwindow.h
src/: binary.cpp  loader.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  output_handler.cpp  outputwindow.cpp  outputwindow.ui
